# agentkit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
agentkit/: __init__.py  agent.py  cli.py  config.py  context.py  errors.py  flow.py  spec.py  types.py
agentkit/engine/: __init__.py  compiler.py  executor.py  state.py
agentkit/identity/: __init__.py  secrets.py
agentkit/memory/: __init__.py  base.py  embeddings.py  store.py  strategies.py
agentkit/models/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  groq_provider.py  openai_provider.py
agentkit/observability/: __init__.py  eval.py  tracing.py
agentkit/protocols/: __init__.py  a2a.py  mcp_client.py  mcp_server.py
agentkit/runtime/: __init__.py  app.py  checkpoint.py  session.py
agentkit/runtime/dashboard/: agent.html  index.html
agentkit/tools/: __init__.py  base.py  browser.py  code.py  computer.py  registry.py  schema.py
examples/: app_finance.py  app_healthcare.py  app_interop.py  app_patterns.py  app_research.py  app_supervisor.py  flow_pipeline.py  industry_agents.py  protocols_demo.py  realtools.py  serve_agent.py  showcase.py  single_agent.py  start_finance.sh  start_healthcare.sh  start_interop.sh  start_patterns.sh  start_research.sh  start_supervisor.sh
scripts/: capture_screenshots.py  make_architecture_figure.py
tests/: conftest.py  test_checkpoint.py  test_cli.py  test_dashboard.py  test_engine.py  test_errors.py  test_eval.py  test_flow.py  test_memory.py  test_multiagent.py  test_protocols.py  test_providers.py  test_serve.py  test_tools.py  test_tools_exec.py
